unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/PriceApi__Bulk_Price_Rule__c.object-meta.xml
<CustomObject>
    <label>Price Rules Manager</label>
    <nameField>
        <displayFormat>BPR-{00000}</displayFormat>
        <label>Price Rules Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rules Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>