unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Discount_Percentage__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This defines the percent discount that will be applied against the default price of the defined items.</description>
    <inlineHelpText>This defines the percent discount that will be applied against the default price of the defined items.</inlineHelpText>
    <label>Price Rule Percentage</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>