unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Event_Items__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Event_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when we select all Event items as the item criteria.</description>
    <inlineHelpText>This field is checked when we select all Event items as the item criteria.</inlineHelpText>
    <label>Event Items</label>
    <type>Checkbox</type>
</CustomField>