unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates and Deactivates all related price rules.</description>
    <inlineHelpText>Activates and Deactivates all related price rules.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>