unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Item_List__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Item_List__c</fullName>
    <description>Defines the Item/Item Class/Catalog/Store/Business Group (csv) that will receive the discount.</description>
    <inlineHelpText>Defines the Item/Item Class/Catalog/Store/Business Group (csv) that will receive the discount.</inlineHelpText>
    <label>Item List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>