unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Item_Type__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Item_Type__c</fullName>
    <description>Specify the grouping of items to apply the discount.</description>
    <inlineHelpText>Specify the grouping of items to apply the discount.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Groups</fullName>
            </value>
            <value>
                <fullName>Catalogs</fullName>
            </value>
            <value>
                <fullName>Event Items</fullName>
            </value>
            <value>
                <fullName>Item Classes</fullName>
            </value>
            <value>
                <fullName>Items</fullName>
            </value>
            <value>
                <fullName>Stores</fullName>
            </value>
            <value>
                <fullName>Subscription Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>