unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Max_Num_Available__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Max_Num_Available__c</fullName>
    <description>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignment by minimum quantity.</description>
    <inlineHelpText>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignment by minimum quantity.</inlineHelpText>
    <label>Max Num Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>