unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Max_Quantity__c</fullName>
    <description>The maximum number of times this rule can be used. Typically used to incentivize customers to purchase products early or for flash/date-driven sales. Leave blank if you do not want to limit the number of times the rule can be applied.</description>
    <inlineHelpText>The maximum number of times this rule can be used. Typically used to incentivize customers to purchase products early or for flash/date-driven sales. Leave blank if you do not want to limit the number of times the rule can be applied.</inlineHelpText>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>