unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Price_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Price_Rule_Name__c</fullName>
    <description>Provide the name that will be used to create new Price Rule Names.</description>
    <inlineHelpText>Provide the name that will be used to create new Price Rule Names.</inlineHelpText>
    <label>Price Rule Name</label>
    <type>TextArea</type>
</CustomField>