unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Required_Badge_Types__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Required_Badge_Types__c</fullName>
    <description>Comma separated list of Badge Types required to be considered eligible for the Price Rule.</description>
    <inlineHelpText>Comma separated list of Badge Types required to be considered eligible for the Price Rule.</inlineHelpText>
    <label>Required Badge Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>