unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Required_Source_Codes__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Required_Source_Codes__c</fullName>
    <description>Comma separated list of Source Codes required to be considered eligible for the Price Rule.</description>
    <inlineHelpText>Comma separated list of Source Codes required to be considered eligible for the Price Rule.</inlineHelpText>
    <label>Required Source Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>