unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Required_Subscription_Plans__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Required_Subscription_Plans__c</fullName>
    <description>Select the Subscription Plan that must be selected for this rule to apply to the purchase of the items. Leave blank to not constrain rule by Subscription Plan.</description>
    <inlineHelpText>Select the Subscription Plan that must be selected for this rule to apply to the purchase of the items. Leave blank to not constrain rule by Subscription Plan.</inlineHelpText>
    <label>Required Subscription Plans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>