unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Start_Date__c</fullName>
    <description>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</description>
    <inlineHelpText>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>