unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/fields/PriceApi__Subscription_Items__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Subscription_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when we select Subscription Items as the Item Type in the price rule builder.</description>
    <inlineHelpText>This field is checked when we select Subscription Items as the Item Type in the price rule builder.</inlineHelpText>
    <label>Subscription Items</label>
    <type>Checkbox</type>
</CustomField>