unpackaged/main/default/objects/PriceApi__Bulk_Price_Rule__c/listViews/PriceApi__All.listView-meta.xml
<ListView>
    <fullName>PriceApi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>